--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -6,4 +6,14 @@ a:link {
 button {
   font-family: inherit;
   color: #fff;
+  font-size: inherit;
+}
+
+.heading-1 {
+  font-size: 4.8rem;
+  line-height: 1.2;
+  margin-bottom: 2rem;
+}
+.paragraph {
+  color: $gray-dark;
 }
