--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,9 +15,7 @@ body {
 
 .header {
   display: flex;
-  width: 100rem;
   height: 8rem;
-  margin: 0 auto;
   align-items: center; }
 
 .nav {
@@ -32,19 +30,20 @@ body {
   .nav__link:hover, .nav__link:active {
     color: #35323e; }
 
+.header,
 .section-hero,
 .section-form,
 .section-features,
 .section-cta {
-  max-width: 100rem;
-  margin: 0 auto; }
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 4rem; }
 
 .section-hero {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
-  gap: 6rem;
-  padding: 4rem; }
+  gap: 6rem; }
 
 a:link {
   font-family: inherit;
@@ -84,6 +83,35 @@ button {
 
 .hero__img {
   width: 100%; }
+
+.form {
+  display: flex;
+  align-items: center;
+  padding: 3rem 6rem;
+  gap: 2rem;
+  background-color: #3b3054;
+  width: 100%;
+  background-image: url("../images/bg-shorten-desktop.svg");
+  background-size: cover; }
+  .form__input {
+    width: 100%; }
+  .form input {
+    border: none;
+    width: 100%;
+    height: 4.5rem;
+    padding: 0.8rem 2rem;
+    border-radius: 1rem; }
+    .form input::placeholder {
+      color: #f46262;
+      font-size: 1.6rem;
+      font-family: inherit; }
+  .form__btn {
+    width: 16rem;
+    height: 4.5rem;
+    background-color: #2acfcf;
+    border-radius: 1rem; }
+    .form__btn:hover {
+      background-color: rgba(42, 207, 207, 0.8); }
 
 .margin-bottom-medium {
   margin-bottom: 2.4rem; }
