--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -27,3 +27,39 @@
     width: 100%;
   }
 }
+
+.form {
+  display: flex;
+  align-items: center;
+  padding: 3rem 6rem;
+  gap: 2rem;
+    background-color: $primary-violet;
+  width: 100%;
+  background-image: url('../images/bg-shorten-desktop.svg');
+  background-size: cover;
+  &__input {
+    width: 100%;
+  }
+  & input {
+    border: none;
+
+    width: 100%;
+    height: 4.5rem;
+    padding: 0.8rem 2rem;
+    border-radius: 1rem;
+    &::placeholder {
+      color: $secondary-color;
+      font-size: 1.6rem;
+      font-family: inherit;
+    }
+  }
+  &__btn {
+    width: 16rem;
+    height: 4.5rem;
+    background-color: $primary-cyan;
+    border-radius: 1rem;
+    &:hover {
+      background-color: rgba($primary-cyan, 0.8);
+    }
+  }
+}
