--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -10,10 +10,18 @@ button {
 }
 
 .heading-1 {
-  font-size: 4.8rem;
+  font-size: 6.4rem;
   line-height: 1.2;
   margin-bottom: 2rem;
 }
 .paragraph {
   color: $gray-dark;
+}
+
+.heading-2 {
+  font-size: 4rem;
+}
+.heading-3 {
+   font-size: 2.4rem;
+   margin-bottom: 2rem;
 }
