--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -25,3 +25,8 @@ button {
    font-size: 2.4rem;
    margin-bottom: 2rem;
 }
+.heading-4 {
+   font-size: 4rem;
+   color: #fff;
+   margin-bottom: 2rem;
+}
