--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,7 +33,6 @@ body {
 .header,
 .section-hero,
 .features,
-.link__previews,
 .footer {
   max-width: 120rem;
   margin: 0 auto;
@@ -230,13 +229,21 @@ button {
   .footer__logo path {
     fill: #fff; }
 
+.links {
+  padding: 4rem;
+  margin: 0 auto;
+  max-width: 120rem;
+  display: grid;
+  grid-template-columns: minmax(auto, 120rem); }
+
 .link__previews {
   padding: 0;
   background-color: #fff;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  min-width: 110rem; }
+  margin: 0 auto;
+  width: 100%; }
 
 .link__preview {
   padding: 3rem 5rem;
