--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -42,6 +42,7 @@
 
   &__input {
     width: 100%;
+    position:relative;
   }
   & input {
     border: none;
@@ -65,6 +66,11 @@
       background-color: rgba($primary-cyan, 0.8);
     }
   }
+}
+.empty-msg{
+  margin-top:1rem;
+  color:$secondary-color;
+  font-style: italic;
 }
 
 .features {
@@ -179,20 +185,21 @@
    &__previews {
 
    padding: 0 ;
-   background-color: #fff;
-   border-radius: 5px;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    width: 100%;
+   gap:2rem;
    }
    &__preview {
    padding:3rem 5rem;
+   background-color: #fff;
    display: flex;
    align-items: center;
    height: 5rem;
    width: 100%;
    gap: 2rem;
+   border-radius: 5px;
    }
    &__input {
       margin-right: auto;
