--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,10 +8,65 @@
 
 html {
   font-size: 62.5%; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 60%; } }
+  @media only screen and (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media only screen and (max-width: 37.5em) {
+    html {
+      font-size: 45%; } }
 
 body {
   font-family: 'Poppins';
   font-size: 1.8rem; }
+  @media only screen and (max-width: 56.25em) {
+    body .btn-mobile-nav {
+      border: none;
+      display: block;
+      background-color: var(--white-color);
+      z-index: 100;
+      position: absolute;
+      top: 3.8rem;
+      right: 5rem; }
+    body .nav {
+      margin: 0;
+      padding: 5rem 0;
+      position: absolute;
+      background-color: #3b3054;
+      width: 70%;
+      align-items: center;
+      top: 10rem;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 60%;
+      z-index: 40;
+      flex-direction: column;
+      display: none; }
+    body .nav__list {
+      flex-direction: column;
+      gap: 3rem;
+      font-size: 2rem; }
+    body .nav__link {
+      line-height: 5rem;
+      font-weight: 700;
+      color: #fff; }
+    body .nav-open .nav {
+      display: flex;
+      pointer-events: auto;
+      visibility: visible; }
+    body .btn-close-nav {
+      display: none; }
+    body .btn-open-nav {
+      display: block; }
+    body .nav-open .btn-close-nav {
+      display: block; }
+    body .nav-open .btn-open-nav {
+      display: none; } }
+
+.btn-mobile-nav {
+  display: none; }
 
 .header {
   display: flex;
@@ -19,7 +74,12 @@ body {
   align-items: center; }
 
 .nav {
-  margin-left: 10%; }
+  width: 75%;
+  margin-left: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 2rem; }
   .nav__list {
     display: flex;
     gap: 2rem;
@@ -43,6 +103,10 @@ body {
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   gap: 6rem; }
+  @media only screen and (max-width: 56.25em) {
+    .section-hero {
+      display: flex;
+      flex-direction: column; } }
 
 .section-features {
   margin-top: -10rem;
@@ -100,6 +164,10 @@ button {
   margin-left: auto;
   display: flex;
   gap: 2rem; }
+  @media only screen and (max-width: 56.25em) {
+    .header__cta {
+      flex-direction: column;
+      margin: auto; } }
 
 .btn {
   border: none;
@@ -118,6 +186,16 @@ button {
 .hero__img {
   width: 100%; }
 
+@media only screen and (max-width: 56.25em) {
+  .hero__img-box {
+    order: -1; } }
+
+@media only screen and (max-width: 56.25em) {
+  .hero__detail {
+    display: flex;
+    flex-direction: column;
+    align-items: center; } }
+
 .form {
   grid-column: 1/-1;
   display: flex;
@@ -129,6 +207,10 @@ button {
   background-image: url("../images/bg-shorten-desktop.svg");
   background-size: cover;
   border-radius: 1rem; }
+  @media only screen and (max-width: 56.25em) {
+    .form {
+      flex-direction: column;
+      align-items: center; } }
   .form__input {
     width: 100%;
     position: relative; }
@@ -147,6 +229,9 @@ button {
     height: 4.5rem;
     background-color: #2acfcf;
     border-radius: 1rem; }
+    @media only screen and (max-width: 56.25em) {
+      .form__btn {
+        width: 100%; } }
     .form__btn:hover {
       background-color: rgba(42, 207, 207, 0.8); }
 
@@ -171,6 +256,16 @@ button {
     position: absolute;
     top: 50%;
     left: 10%; }
+    @media only screen and (max-width: 56.25em) {
+      .features::after {
+        height: 80%;
+        width: 1rem;
+        left: 50%;
+        top: 10%; } }
+  @media only screen and (max-width: 56.25em) {
+    .features {
+      grid-template-columns: 1fr;
+      width: 80%; } }
 
 .feature {
   background-color: #fff;
@@ -217,8 +312,20 @@ button {
   .footer__columns {
     display: grid;
     grid-template-columns: repeat(3, 1fr); }
+    @media only screen and (max-width: 56.25em) {
+      .footer__columns {
+        grid-template-columns: 1fr;
+        align-items: center;
+        gap: 0.8rem; } }
+  .footer__column {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
   .footer__list {
-    list-style: none; }
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
   .footer__link:link, .footer__link:visited {
     text-decoration: none;
     color: #9e9aa7; }
@@ -232,8 +339,17 @@ button {
   .footer__icon-box {
     display: flex;
     gap: 1rem; }
+    @media only screen and (max-width: 56.25em) {
+      .footer__icon-box {
+        justify-content: space-between; } }
   .footer__logo path {
     fill: #fff; }
+  @media only screen and (max-width: 56.25em) {
+    .footer {
+      grid-template-columns: 1fr;
+      width: 25%;
+      align-content: center;
+      row-gap: 4rem; } }
 
 .links {
   padding: 4rem;
@@ -259,6 +375,11 @@ button {
   width: 100%;
   gap: 2rem;
   border-radius: 5px; }
+  @media only screen and (max-width: 56.25em) {
+    .link__preview {
+      flex-direction: column;
+      align-items: center;
+      height: auto; } }
 
 .link__input {
   margin-right: auto;
