--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -2,6 +2,10 @@
   margin-left: auto;
   display: flex;
   gap: 2rem;
+  @include respond(tab-port){
+   flex-direction: column;
+   margin: auto;
+  }
 }
 
 .btn {
@@ -26,6 +30,18 @@
   &__img {
     width: 100%;
   }
+   &__img-box {
+   @include respond(tab-port){
+      order: -1;
+   }
+}
+   &__detail {
+      @include respond(tab-port){
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   }
+   }
 }
 
 .form {
@@ -39,6 +55,10 @@
   background-image: url('../images/bg-shorten-desktop.svg');
   background-size: cover;
    border-radius:1rem;
+   @include respond(tab-port){
+      flex-direction: column;
+      align-items: center;
+   }
 
   &__input {
     width: 100%;
@@ -62,6 +82,9 @@
     height: 4.5rem;
     background-color: $primary-cyan;
     border-radius: 1rem;
+    @include respond(tab-port){
+      width: 100%;
+   }
     &:hover {
       background-color: rgba($primary-cyan, 0.8);
     }
@@ -89,6 +112,16 @@
       position: absolute;
       top:50%;
       left:10%;
+      @include respond(tab-port){
+      height: 80%;
+      width: 1rem;
+      left:50%;
+      top:10%;
+   }
+   }
+   @include respond(tab-port){
+     grid-template-columns: 1fr;
+     width: 80%;
    }
    
 }
@@ -145,9 +178,23 @@
    &__columns {
       display: grid;
       grid-template-columns: repeat(3,1fr);
+      @include respond(tab-port){
+     grid-template-columns: 1fr;
+     align-items:center ;
+     gap: 0.8rem;
    }
+}
+&__column {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
    &__list {
       list-style: none;
+         display:flex;
+   flex-direction:column;
+   align-items: center;
    }
    &__link:link,&__link:visited   {
       text-decoration:none;
@@ -165,10 +212,20 @@
    }
    &__icon-box {
       display:flex;
-      gap:1rem
+      gap:1rem;
+      @include respond(tab-port){
+
+         justify-content: space-between;
+      }
    }
    &__logo path {
       fill:#fff;
+   }
+@include respond(tab-port){
+     grid-template-columns: 1fr;
+     width: 25%;
+     align-content: center;
+     row-gap:4rem;
    }
 }
 
@@ -200,6 +257,11 @@
    width: 100%;
    gap: 2rem;
    border-radius: 5px;
+   @include respond(tab-port){
+      flex-direction: column;
+      align-items: center;
+      height: auto;
+   }
    }
    &__input {
       margin-right: auto;
@@ -218,3 +280,4 @@
       }      
    }
 }
+
