--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -7,7 +7,12 @@
 }
 
 .nav {
+  width: 75%;
   margin-left: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 2rem;
   &__list {
     display: flex;
     gap: 2rem;
@@ -38,6 +43,10 @@
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   gap: 6rem;
+  @include respond(tab-port){
+    display:flex;
+    flex-direction: column;
+  }
 }
 
 .section-features {
